# gpsr

./: Dockerfile  ERROR_CORRECTIONS.md  GPSR Audio Intent Parser.md  README.md  README_コマンド.md  RuleBook.md  UPDATE.md  VADtuning.md  compose.yaml  doc.md
gpsr_data/vocab/: command.txt  location_names.md  names.md  objects.md  room_names.md  test_objects.md  vocab.yaml
src/hsr_audio_pipeline/: CMakeLists.txt  package.xml
src/hsr_audio_pipeline/config/: vocab.yaml
src/hsr_audio_pipeline/hsr_audio_pipeline/launch/: audio_test.launch
src/hsr_audio_pipeline/launch/: audio_asr_simple_test.launch  audio_pipeline.launch  audio_test.launch  audio_vad_asr_test.launch  audio_vad_test.launch  gpsr_audio_intent_test.launch  gpsr_audio_intent_test_updated.launch  gpsr_parser_node_updated.launch  gpsr_run.launch  gpsr_smach_test.launch
src/hsr_audio_pipeline/scripts/: apply_corrections_example.py  asr_plain_echo.py  audio_rms_monitor.py  corrections_candidates.py  faster_whisper_asr_node.py  faster_whisper_asr_simple_node.py  gen_corrections.py  gpsr_asr_logger.py  gpsr_intent_echo.py  gpsr_intent_node.py  gpsr_parser.py  gpsr_parser.py-bk  gpsr_parser_node.py  gpsr_parser_node2.py  gpsr_projector.py  gpsr_smach_node.py  gpsr_vocab.py  jsonl_to_corrections.py  silero_vad_node.py
src/hsr_audio_pipeline/tools/: gpsr_eval.py  jsonl_to_corrections.py  make_vocab_yaml.py
